# undermountain

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat  build_x86.bat  manual.md  roguelike.sln  run.bat  run_x86.bat  undermountain.bat  undermountain.sln  vcpkg.json
assets/: content.json
data/: config.cfg  config.txt
include/libtcod-1.6.3/: console.hpp  fov.hpp  libtcod.h  libtcod.hpp  libtcod_int.h  namegen.hpp  path.hpp  sys.hpp  txtfield.hpp
lib/libtcod-1.6.3/: libtcod-gui.lib  libtcod.lib
resource/: Thumbs.db  config.txt  names.txt
roguelike/: roguelike.vcxproj  roguelike.vcxproj.filters
roguelike/include/: platform.h  roguelike.h
roguelike/src/: actor.c  actor.h  assets.c  config.c  game.c  input.c  item.c  item.h  main.c  map.c  map.h  message.c  object.c  projectile.c  renderer.c  room.c  spell.h  tile.c  tooltip_option.c  ui.c  ui.h
src/: CMemLeak.c  CMemLeak.h  CMemleak.c  CMemleak.h  ECS.c  ECS.h  actor.c  actor.h  ai.c  alert.c  assemblage.c  assemblage.h  assets.c  assets.h  component.c  component.h  config.c  config.h  console.c  console.h  engine.c  engine.h  entities.c  entity.c  entity.h  game.c  game.h  gfx.c  input.c  input.h  item.c  item.h  light.c  light.h  main.c  map.c  map.h  menu.c  menu.h  message.c  (+45 more)
src.old/: assemblage.h  component.c  entity.h  game.c  main.c  map.h  message.h  panel.c  room.c  room.h  spell.h  tile.c
src/game/: ability.c  ability.h  actor.c  actor.h  ammunition_type.h  armor_proficiency.h  assets.c  assets.h  base_attack_bonus.c  base_attack_bonus.h  base_attack_bonus_progression.c  base_attack_bonus_progression.h  base_attack_bonus_type.c  base_attack_bonus_type.h  base_item.c  base_item.h  class.c  class.h  color.c  color.h  corpse.c  corpse.h  damage_type.h  data.c  data.h  effect.h  equip_slot.c  equip_slot.h  equippability.h  explosion.c  explosion.h  faction.c  faction.h  feat.c  feat.h  item.c  item.h  light.c  light.h  list.c  (+43 more)
src/platform/: config.c  config.h  platform.c  platform.h  scene.h
src/scenes/: create.c  create.h  create_scene.c  create_scene.h  game.c  game.h  game_scene.c  menu.c  menu.h  menu_scene.c  scene_about.c  (+7 more)
undermountain/: cpp.hint  undermountain.vcxproj  undermountain.vcxproj.filters
(+177 files in other folders)
